# mitahill-better-video

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.base  PROJECT.MD  README.md  VERSION  config.py  db.py  docker-compose.release.yml  docker-compose.yml  pyproject.toml  start.sh  streamlit_app.py  worker.py
app/: config.py  db.py  main.py  streamlit_app.py  worker.py
app/WebUI/: index.html  package-lock.json  package.json
app/WebUI/src/: App.vue
app/backend/: api.py  main.py  utils.py  worker_service.py
app/frontend/: index.html  package.json
app/frontend/src/: App.vue  styles.css
app/src/Api/: __init__.py  app_factory.py  constants.py  (+2 more)
app/src_ui/: layout.py  main.py  manager.py
app/src_worker/: main.py  notifier.py  processor.py  segmenter.py  utils.py
config/: .env.example
deploy/: docker-compose.yml
deploy/compose/: README.md  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.test.yml
deploy/docker/: Dockerfile.app  Dockerfile.base
deploy/nginx/: nginx.realip.conf.example
docs/: API.md  ARCHITECTURE.md  CURRENT_ISSUES.md  DB_OPTIMIZATION.md  DEPLOY_REAL_IP.md  FUTURE_AUDIO_ENHANCEMENT.md  GEMINI.MD  PROJECT.MD  README.md  SOP.md  THIRD_PARTY.md  WSL2.md
output/: tasks.db
output/run_e0ead318e84a4df3b089797ee69a7803/: audio.m4a
pre-run/: README.md  docker-compose.yaml
r/: docker-compose.yaml  docker-compose.yml
r/output/: tasks.db
scripts/: start.sh
src_ui/: layout.py  main.py  manager.py
src_worker/: main.py  processor.py  segmenter.py  upscaler.py  utils.py
(+204 files in other folders)
