[project]
name = "mitahill-better-video"
version = "0.1.0"
description = "Flask and Vue web UI for GPU video/image enhancement workflows."
requires-python = ">=3.10,<3.11"
dependencies = []

[dependency-groups]
base = [
    "setuptools<70",
    "wheel",
    "numpy==1.24.4",
    "torch==1.13.1+cu116",
    "torchvision==0.14.1+cu116",
    "cython==0.29.36",
    "openai-whisper==20231117",
    "basicsr==1.4.2",
    "facexlib==0.2.5",
    "gfpgan==1.3.5",
    "requests==2.32.5",
    "opencv-python==4.8.0.76",
    "Pillow==9.5.0",
    "tqdm==4.65.0",
    "ffmpeg-python==0.2.0",
    "pyyaml==6.0",
    "flask==2.3.3",
    "gunicorn==21.2.0",
    "python-dotenv==1.0.1",
]
app = [
    "flask-socketio==5.3.6",
    "eventlet==0.36.1",
    "yt-dlp[default]==2026.7.4",
]
dev = [
    "uv==0.8.13",
]

[[tool.uv.index]]
name = "pytorch-cu116"
url = "https://download.pytorch.org/whl/cu116"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu116" }
torchvision = { index = "pytorch-cu116" }

[tool.uv]
package = false
no-build-isolation-package = ["openai-whisper", "basicsr", "facexlib", "gfpgan"]
